Update \figpageref to \figref

--- a/configures.tex
+++ b/configures.tex
@@ -3,6 +3,7 @@
 \graphicspath{ {figures/} }
 \usepackage{titlesec}
 \usepackage{pdflscape}
+\usepackage{tabularx}
 
 \usepackage{algorithm} 
 \usepackage{algorithmic}
