--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,26 @@
+@techreport{Tassey2002,
+    author = {Tassey, Gregory},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Books/report02-3.pdf:pdf},
+    institution = {National Institute of Standards and Technology Acquisition and Assistance Division},
+    mendeley-groups = {Testing},
+    pages = {309},
+    title = {{The Economic Impacts of Inadequate Infrastructure for Software Testing}},
+    url = {https://www.nist.gov/sites/default/files/documents/director/planning/report02-3.pdf},
+    year = {2002}
+}
+
+@book{Jackson2007,
+    author = {Jackson, Daniel and Thomas, Martyn and Millett, Lynette},
+    doi = {10.17226/11923},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Books/11923.pdf:pdf},
+    isbn = {9780309103947},
+    mendeley-groups = {Testing},
+    pages = {149},
+    publisher = {THE NATIONAL ACADEMIES PRESS},
+    title = {{Software for Dependable Systems: Sufficient Evidence?}},
+    year = {2007}
+}
+
 @inbook{Chan2004,
     address = {Berlin, Heidelberg},
     author = {Chan, Kwok Ping and Chen, Tsong Yueh and Towey, Dave},
