--- a/sitdhibong-proposal.tex
+++ b/sitdhibong-proposal.tex
@@ -19,6 +19,7 @@
 \include{commands}
 
 \begin{document}
+
     \makethesiscover
 
     \pagenumbering{arabic}
@@ -48,5 +49,7 @@
     \bibliography{references}
     % --------------------
 
+    % \clearpage
+    % \input{edit-log}
 \end{document}
 
