--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -1,9 +1,9 @@
 \section{ที่มาและความสำคัญ} 
 
-ในกระบวนการพัฒนาซอฟต์แวร์นั้น ขั้นตอนการทดสอบซอฟต์แวร์ถือเป็นช่วงที่ใช้ทรัพยากรในการดำเนินงานมากที่สุดกว่ากึ่งหนึ่งของทรัพยากรที่ใช้สำหรับพัฒนาซอฟต์แวร์ทั้งหมด 
-ทำให้เห็นได้ว่าการพัฒนาซอฟต์แวร์นั้นเป็นให้ความสำคัญต่อคุณภาพของซอฟต์แวร์เป็นอย่างมาก 
-เพราะการทดสอบซอฟต์แวร์คือขั้นตอนที่ทำขึ้นเพื่อค้นหาข้อผิดพลาดที่อาจยังคงอยู่ในซอฟต์แวร์ ที่อาจจังคงอยู่ภายในซอฟต์แวร์ \cite{Myers:2011:AST:983238} 
-นอกจากนั้นแล้วยังเป็นกระบวนการที่ทำให้สามารถมั่นใจได้ถึงคุณภาพและประสิทธิภาพของซอฟต์แวร์ที่พัฒนาขึ้นด้วย
+% ในกระบวนการพัฒนาซอฟต์แวร์นั้น ขั้นตอนการทดสอบซอฟต์แวร์ถือเป็นช่วงที่ใช้ทรัพยากรในการดำเนินงานมากที่สุดกว่ากึ่งหนึ่งของทรัพยากรที่ใช้สำหรับพัฒนาซอฟต์แวร์ทั้งหมด 
+% ทำให้เห็นได้ว่าการพัฒนาซอฟต์แวร์นั้นเป็นให้ความสำคัญต่อคุณภาพของซอฟต์แวร์เป็นอย่างมาก 
+% เพราะการทดสอบซอฟต์แวร์คือขั้นตอนที่ทำขึ้นเพื่อค้นหาข้อผิดพลาดที่อาจยังคงอยู่ในซอฟต์แวร์ ที่อาจจังคงอยู่ภายในซอฟต์แวร์ \cite{Myers:2011:AST:983238} 
+% นอกจากนั้นแล้วยังเป็นกระบวนการที่ทำให้สามารถมั่นใจได้ถึงคุณภาพและประสิทธิภาพของซอฟต์แวร์ที่พัฒนาขึ้นด้วย
 
 % การค้นหาข้อผิดพลาดที่ปรากฎอยู่ภายในซอฟต์แวร์นั้น ก็จำเป็นจะต้องสร้างกรณีทดสอบให้ครอบคลุม{\sourcecode}ที่ได้พัฒนาขึ้นให้มากที่สุดเท่าที่จะเป็นไปได้ หลายงานวิจัย [x,x,x,x]
 
@@ -16,14 +16,17 @@
 % โดยอาศัยการเก็บข้อมูลในช่วง{\RegressionTesting} ({\RegressionTestingEN}) โดยกรณีทดสอบนั้นครอบคลุมการเรียกใช้ระหว่างกัน
 % ตาม{\scg}ที่สร้างขึ้นจาก
 
-การพัฒนาโปรแกรมนั้นจะแยกส่วนประกอบของโปรแกรมออกเป็นส่วนย่อยเพื่อความสะดวกในการพัฒนา ซึ่งในขั้นตอนนี้จะใช้การทดสอบส่วนย่อย (Unit Test) 
-เพื่อหาข้อผิดพลาดที่อยู่โปรแกรม โดยจะจำลองการเชื่อมต่อกับส่วนอื่น ๆ ในรูปแบบของสตับ (Stub) และไดรเวอร์ (Drive) เพื่อจำกัดขอบเขตของการค้นหาข้อผิดพลาด
-หากแต่ในขั้นตอนผนวกรวม{\sourcecode}ของส่วนย่อยเข้าด้วยกันนั้น อาจจะพบข้อผิดพลาดที่เกิดขึ้นบน{\Path}ระหว่าง{\class}ที่อยู่ต่างส่วนย่อยได้
+% การพัฒนาโปรแกรมนั้นจะแยกส่วนประกอบของโปรแกรมออกเป็นส่วนย่อยเพื่อความสะดวกในการพัฒนา ซึ่งในขั้นตอนนี้จะใช้การทดสอบส่วนย่อย (Unit Test) 
+% เพื่อหาข้อผิดพลาดที่อยู่โปรแกรม โดยจะจำลองการเชื่อมต่อกับส่วนอื่น ๆ ในรูปแบบของสตับ (Stub) และไดรเวอร์ (Drive) เพื่อจำกัดขอบเขตของการค้นหาข้อผิดพลาด
+% หากแต่ในขั้นตอนผนวกรวม{\sourcecode}ของส่วนย่อยเข้าด้วยกันนั้น อาจจะพบข้อผิดพลาดที่เกิดขึ้นบน{\Path}ระหว่าง{\class}ที่อยู่ต่างส่วนย่อยได้
 
-งานวิจัยนี้มีจุดประสงค์ที่จะนำเสนอวิธีการสร้างกรณีทดสอบสำหรับ{\sourcecode}ของ{\softwareComponent}ที่นำมาทดสอบเพื่อประกอบเข้าด้วยกัน
-ในช่วงการ\FirstTimeDefine{\IntegrationTesting}{\IntegrationTestingEN} ด้วยการสร้างกรณีทดสอบตามเส้นทางการทดสอบ
-ที่มีน้ำหนักมากที่สุดจากเส้นทางทั้งหมดของ{\scg} ซึ่งได้จากการวิเคราะห์แบบสถิตของ{\sourcecode}ที่นำมาพิจารณา 
-โดยการสร้างกรณีทดสอบนี้จะจัดเตรียมข้อมูลทดสอบจากการพิจารณาข้อมูลค่าคงที่ ที่จัดเก็บจาก{\sourcecode} ได้แก่ ข้อความ ตัวเลข และชุดข้อมูล 
-เข้าร่วมกับเงื่อนไขของเส้นทาง (Path conditions) จาก{\cfg} 
-ร่วมกันเพื่อกำหนดขอบเขตการสุ่มค่าข้อมูลนำเข้าที่สอดคล้องกับ\FirstTimeDefine{\MethodSignature}{\MethodSignatureEN}ที่ต้องการทดสอบ
+% งานวิจัยนี้มีจุดประสงค์ที่จะนำเสนอวิธีการสร้างกรณีทดสอบสำหรับ{\sourcecode}ของ{\softwareComponent}ที่นำมาทดสอบเพื่อประกอบเข้าด้วยกัน
+% ในช่วงการ\FirstTimeDefine{\IntegrationTesting}{\IntegrationTestingEN} ด้วยการสร้างกรณีทดสอบตามเส้นทางการทดสอบ
+% ที่มีน้ำหนักมากที่สุดจากเส้นทางทั้งหมดของ{\scg} ซึ่งได้จากการวิเคราะห์แบบสถิตของ{\sourcecode}ที่นำมาพิจารณา 
+% โดยการสร้างกรณีทดสอบนี้จะจัดเตรียมข้อมูลทดสอบจากการพิจารณาข้อมูลค่าคงที่ ที่จัดเก็บจาก{\sourcecode} ได้แก่ ข้อความ ตัวเลข และชุดข้อมูล 
+% เข้าร่วมกับเงื่อนไขของเส้นทาง (Path conditions) จาก{\cfg} 
+% ร่วมกันเพื่อกำหนดขอบเขตการสุ่มค่าข้อมูลนำเข้าที่สอดคล้องกับ\FirstTimeDefine{\MethodSignature}{\MethodSignatureEN}ที่ต้องการทดสอบ
 
+การทดสอบซอฟต์แวร์เป็นขั้นตอนที่ทำขึ้นเพื่อค้นหาข้อผิดพลาดที่ยังคงอยู่ภายในซอฟต์แวร์ \cite{Myers:2011:AST:983238} 
+อีกทั้งยังเป็นกระบวนการสร้างความมั่นใจด้านคุณภาพของซอฟต์แวร์ที่ได้พัฒนาขึ้น ดังนั้นกว่ากึ่งหนึ่งของทรัพยากรที่ใช้ในการดำเนินงานโครงการพัฒนาซอฟต์แวร์
+จึงถูกจัดสรรค์ให้กับขั้นตอนการทดสอบซอฟต์แวร์นี้ \cite{Jackson2007, Tassey2002} 
