Restructure revised version

--- a/sitdhibong-proposal.tex
+++ b/sitdhibong-proposal.tex
@@ -20,6 +20,9 @@
 
 \begin{document}
 
+    \input{edit-log}
+    \clearpage
+
     \makethesiscover
 
     \pagenumbering{arabic}
@@ -49,7 +52,5 @@
     \bibliography{references}
     % --------------------
 
-    % \clearpage
-    % \input{edit-log}
 \end{document}
 
