--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -94,8 +94,14 @@
 \newcommand{\CUT}{{\class}ภายใต้การทดสอบ}
 \newcommand{\CUTEN}{Class under test}
 
+\newcommand{\SUT}{ซอฟต์แวร์ภายใต้การทดสอบ}
+\newcommand{\SUTEN}{Software under test}
+
 \newcommand{\Path}{ทางเดิน}
 \newcommand{\PathEN}{Path}
+
+\newcommand{\DynamicInformation}{ข้อมูลเชิงพลวัต}
+\newcommand{\DynamicInformationEN}{Dynamic information}
 
 % - - - - - - - - - - - - - - - - - - - -
 % NEED BY \makethesiscover
