--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -1,4 +1,5 @@
 \section{ที่มาและความสำคัญ} 
+\label{sec:introduction}
 
 % ในกระบวนการพัฒนาซอฟต์แวร์นั้น ขั้นตอนการทดสอบซอฟต์แวร์ถือเป็นช่วงที่ใช้ทรัพยากรในการดำเนินงานมากที่สุดกว่ากึ่งหนึ่งของทรัพยากรที่ใช้สำหรับพัฒนาซอฟต์แวร์ทั้งหมด 
 % ทำให้เห็นได้ว่าการพัฒนาซอฟต์แวร์นั้นเป็นให้ความสำคัญต่อคุณภาพของซอฟต์แวร์เป็นอย่างมาก 
@@ -29,4 +30,33 @@
 
 การทดสอบซอฟต์แวร์เป็นขั้นตอนที่ทำขึ้นเพื่อค้นหาข้อผิดพลาดที่ยังคงอยู่ภายในซอฟต์แวร์ \cite{Myers:2011:AST:983238} 
 อีกทั้งยังเป็นกระบวนการสร้างความมั่นใจด้านคุณภาพของซอฟต์แวร์ที่ได้พัฒนาขึ้น ดังนั้นกว่ากึ่งหนึ่งของทรัพยากรที่ใช้ในการดำเนินงานโครงการพัฒนาซอฟต์แวร์
-จึงถูกจัดสรรค์ให้กับขั้นตอนการทดสอบซอฟต์แวร์นี้ \cite{Jackson2007, Tassey2002} 
+จึงถูกจัดสรรค์ให้กับขั้นตอนการทดสอบซอฟต์แวร์นี้ \cite{Jackson2007, Tassey2002} ดังนั้นการทดสอบซอฟต์แวร์จึงถือเป็นขั้นตอนที่สำคัญ
+ในกระบวนการพัฒนาซอฟต์แวร์อีกขั้นตอนหนึ่ง
+
+การพัฒนาซอฟต์แวร์นั้นมีแนวทางการพัฒนาหลากหลายแนวทางด้วยกัน ไม่ว่าจะเป็นการกำหนดแนวทางการพัฒนาด้วยการทดสอบ (Test-Driven Development) 
+ที่จะสร้างกรณีทดสอบย่อย (Unit Testing) เพื่อกำหนดพฤติกรรมการทำงานของคลาสที่สนใจ หรือ คลาสภายใต้การทดสอบ (Class under test) [x]
+และการพัฒนาโดยใช้พฤติกรรมการใช้งาน (Behaviour-Driven Development) ซึ่งจะกำหนดลักษณะการใช้งานซอฟต์แวร์แล้ว
+จึงพัฒนาส่วนประกอบของซอฟต์แวร์ที่สอดคล้องกับการใช้งานนั้น [x] 
+ซึ่งทั้ง 2 แนวทางนั้นจะสร้างกรณีทดสอบ เพื่อใช้ในการทดสอบส่วนย่อย (Unit Testing) โดยจะจำลองพฤติกรรมการทำงานของคลาสหรือส่วนประกอบอื่น ๆ
+(Mocking) เช่น ฐานข้อมูล เว็บเซอร์วิส หรืออุปกรณ์เชื่อมต่อที่ต้องการ ที่มีปฏิสัมพันธ์กับคลาสภายใต้การทดสอบ ในลักษณะของ (Stub) และไดรเวอร์ (Driver)
+เพื่อจำกัดขอบเขตของข้อผิดพลาดให้อยู่เฉพาะแต่เพียงคลาสภายใต้การทดสอบเท่านั้น แต่เพื่อให้มั่นใจได้ว่าซอฟต์แวร์สามารถทำงานร่วมกันได้ 
+ตามพฤติกรรมที่ได้จำลองไว้สตับและไดรเวอร์ในขั้นตอนการการทดสอบย่อยนั้น 
+จึงจำเป็นจะต้องทดสอบการทำงานร่วมกันด้วย\FirstTimeDefine{\IntegrationTesting}{\IntegrationTestingEN}
+โดยในขั้นตอนนี้ จะใช้การเชื่อมต่อไปยังส่วนประกอบที่มีปฏิสัมพันธ์กับกระบวนการนั้นโดยตรง เพื่อให้มั่นใจได้ว่าซอฟต์แวร์ภายใต้การทดสอบ (Software under test) 
+สามารถดำเนินงานตามกระบวนการที่สนใจได้โดยไม่เกิดข้อขัดข้อง
+
+ทั้งนี้ การสร้างกรณีทดสอบในขั้นตอนก{\IntegrationTesting}นั้นจะสร้างกรณีทดสอบสอดคล้องตามกระบวนการทำงานของ{\SUT}ที่สนใจ 
+โดยผลลัพธ์ที่เป็นไปได้ย่อมเกิดระหว่างการเรียกใช้งานระหว่างส่วนประกอบภายในซอฟต์แวร์{\SUT}ด้วยกันเอง ตลอดจนส่วนประกอบภายนอก 
+ซึ่งล้วนแล้วแต่มีหลายปัจจัยที่ต้องนำมาพิจารณาร่วมกัน การสร้างกรณีทดสอบอัตโนมัติจึงเข้ามามีบทบาทสำคัญ ช่วยให้การสร้างกรณีทดสอบนั้นขั้นตอนนี้ทำได้รวดเร็วมากยิ่งขึ้น 
+หากแต่การสร้างกรณีทดสอบในขั้นตอน{\IntegrationTesting} ยังต้องใช้\FirstTimeDefine{\DynamicInformation}{\DynamicInformationEN}
+ซึ่งได้จากการสั่งกระทำการ (Execute) ระหว่างชุดกรณีทดสอบกับ{\sourcecode} ซึ่งข้อมูลที่ได้จากวิธีการนี้สามารถอธิบายพฤติกรรมของ{\SUT}ของ{\sourcecode}
+ได้เป็นอย่างดี แต่หากเกิดการเปลี่ยนแปลงของ{\sourcecode}ภายหลังจากที่ได้สั่งกระทำการชุดทดสอบไปแล้ว 
+จะทำให้ชุดทดสอบนั้นไม่สามารถอธิบายคุณลักษณะของ{\sourcecode}ที่เกิดการเปลี่ยนแปลงได้ ดังนั้นหากสามารถนำข้อมูลเชิงสถิตที่ได้จาก{\sourcecode}
+มาสร้างชุดทดสอบได้ ก็จะทำให้ชุดทดสอบที่ได้สามารถอธิบายคุณลักษณะตลอดจนการดำเนินงานของ{\SUT}ที่เป็นปัจจุบันได้
+
+งานวิจัยนี้มีจุดประสงค์ที่จะนำเสนอวิธีการสร้างกรณีทดสอบสำหรับ{\sourcecode}ของ{\softwareComponent}ที่นำมาทดสอบเพื่อประกอบเข้าด้วยกัน
+ในช่วงการ\FirstTimeDefine{\IntegrationTesting}{\IntegrationTestingEN} ด้วยการสร้างกรณีทดสอบตามเส้นทางการทดสอบ
+ที่มีน้ำหนักมากที่สุดจากเส้นทางทั้งหมดของ{\scg} ซึ่งได้จากการวิเคราะห์แบบสถิตของ{\sourcecode}ที่นำมาพิจารณา 
+โดยการสร้างกรณีทดสอบนี้จะจัดเตรียมข้อมูลทดสอบจากการพิจารณาข้อมูลค่าคงที่ ที่จัดเก็บจาก{\sourcecode} ได้แก่ ข้อความ ตัวเลข และชุดข้อมูล 
+เข้าร่วมกับเงื่อนไขของเส้นทาง (Path conditions) จาก{\cfg} 
+ร่วมกันเพื่อกำหนดขอบเขตการสุ่มค่าข้อมูลนำเข้าที่สอดคล้องกับ\FirstTimeDefine{\MethodSignature}{\MethodSignatureEN} ที่ต้องการทดสอบ
