--- a/edit-log.tex
+++ b/edit-log.tex
@@ -1,13 +1,12 @@
-\pagenumbering{alphabet}
-
+\pagenumbering{thaialph}
 \begin{table}[ht!]
-    \center
-    \begin{tabularx}{\textwidth}{|l|l|X|}
+    \centering
+    \begin{tabularx}{\textwidth}{|l|l|l|X|}
         \hline
-        \rowcolor{LightGray}
-        {\bf วันที่}   & {\bf จุดแก้ไข}          & {\bf บันทึกการแก้ไข} \\ \hline
-        2 ธันวาคม    & สถิต หรือ สถิตย์          & ตรวจสอบจากพจานานุกรมฉบับสำนักงานราชบัณฑิตยสภาเรียบร้อยแล้ว \\ \hline
-%                                                ใช้คำว่า {\it "สถิต"} ส่วนคำว่า {\it "สถิตย์"} ไม่มีในพจนานุกรมครับ \\ \hline
-%                    & รูปที่ x (หน้า n)         & ตัดคำว่า\ {\bf (หน้า n)}\ ทิ้งไป \\ \hline
+        \rowcolor{LightGray} 
+        {\bf วันที่}   & {\bf หน้าที่}                    & {\bf จุดแก้ไข}          & {\bf บันทึกการแก้ไข} \\ \hline
+        2 ธันวาคม    & \pageref{sec:introduction}    & สถิต หรือ สถิตย์          & ตรวจสอบจากพจานานุกรมฉบับสำนักงานราชบัณฑิตยสภาเรียบร้อยแล้ว 
+                                              ใช้คำว่า {\bf "สถิต"} ส่วนคำว่า {\bf "สถิตย์"} ไม่มีในพจนานุกรมครับ \\ \hline
+                    & -                             & รูปที่ x (หน้า n)         & ตัดคำว่า\ {\bf (หน้า n)}\ ทิ้งไป \\ \hline
     \end{tabularx}
 \end{table}
