--- a/edit-log.tex
+++ b/edit-log.tex
@@ -7,6 +7,9 @@
         {\bf วันที่}   & {\bf หน้าที่}                    & {\bf จุดแก้ไข}          & {\bf บันทึกการแก้ไข} \\ \hline
         2 ธันวาคม    & \pageref{sec:introduction}    & สถิต หรือ สถิตย์          & ตรวจสอบจากพจานานุกรมฉบับสำนักงานราชบัณฑิตยสภาเรียบร้อยแล้ว 
                                               ใช้คำว่า {\bf "สถิต"} ส่วนคำว่า {\bf "สถิตย์"} ไม่มีในพจนานุกรมครับ \\ \hline
+                    &  \pageref{sec:introduction}   & ไม่พบปัญหาที่เป็นประเด็น & ปรับบทนำ \\ \hline
                     & -                             & รูปที่ x (หน้า n)         & ตัดคำว่า\ {\bf (หน้า n)}\ ทิ้งไป \\ \hline
     \end{tabularx}
 \end{table}
+
+\listofchanges[style=list]
