--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -118,5 +118,5 @@
 \newcommand{\telephone}{0861-629-9905}
 \newcommand{\emailaddress}{sitdhibong.l@student.chula.ac.th}
 \newcommand{\advisor}{รศ.ดร.ธาราทิพย์ สุวรรณศาสตร์}
-\newcommand{\thakeywords}{การสร้างกรณีทดสอบ, ภาษาจาวา, กราฟการเรียกใช้เชิงสถิต}
+\newcommand{\thakeywords}{การสร้างกรณีทดสอบ, ภาษาจาวา, \deleted{กราฟการเรียกใช้เชิงสถิต}\added{\scg}}
 \newcommand{\engkeywords}{Test case generation, Java language, Static call graph}
