Update references: TDD & BDD

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,34 @@
+@article{Markovi2012,
+    author = {Markovi, Du{\v{s}}an and Pe{\v{s}}ovi, Uro{\v{s}} and Jovanovi, {\v{Z}}eljko and Ran, Sini{\v{s}}a},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Theory-of-Testing/Vol4No1{\_}A11.pdf:pdf},
+    journal = {Telfor Journal},
+    keywords = {0 standard,ieee 1451,smart transducers,test-driven developement,web application},
+    mendeley-groups = {Theory of Testing},
+    number = {1},
+    pages = {60--65},
+    title = {{Test-Driven Development of IEEE 1451 Transducer Services and Application}},
+    volume = {4},
+    year = {2012}
+}
+
+@article{Lazar2010,
+    abstract = {Behaviour-Driven Development (BDD) focuses all development activities on the delivery of behaviours - what a system should do, described such that developers and domain experts speak the same language. BDD frameworks allow users to represent the required system behaviour as executable user stories and the acceptance criteria as executable scenarios attached to user stories. In this paper we define a UML profile that allows users to create executable Foundational UML (fUML) stories and scenarios. In order to easily construct scenarios we introduce a BDD model library which contains fUML activities for testing equalities and inclusions. We also present an Eclipse-based development tool that supports a BDD approach for developing fUML components. The tool provides developers a concrete syntax for defining executable scenarios, and automatically updates the project status based on verified delivered behaviorus. {\textcopyright} 2010 Elsevier B.V.},
+    author = {Lazǎr, Ioan and Motogna, Simona and P{\^{a}}rv, Bazil},
+    doi = {10.1016/j.entcs.2010.07.007},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Theory-of-Testing/1-s2.0-S1571066110000666-main.pdf:pdf},
+    isbn = {1571-0661},
+    issn = {15710661},
+    journal = {Electronic Notes in Theoretical Computer Science},
+    keywords = {acceptance criteria,behaviour-driven development,executable UML,executable specification,user story},
+    mendeley-groups = {Theory of Testing},
+    number = {1},
+    pages = {91--105},
+    title = {{Behaviour-driven development of foundational UML components}},
+    volume = {264},
+    year = {2010}
+}
+
+
 @techreport{Tassey2002,
     author = {Tassey, Gregory},
     file = {:Users/sitdh/OneDrive/Thesis/Papers/Books/report02-3.pdf:pdf},
