--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -58,9 +58,6 @@
 \newcommand{\DirectedGraph}{กราฟมีทิศทาง}
 \newcommand{\DirectedGraphEN}{Directed graph}
 
-\newcommand{\StaticInformation}{ข้อมูลเชิงสถิต}
-\newcommand{\StaticInformationEN}{Static information}
-
 \newcommand{\ProgramGraph}{กราฟโปรแกรม}
 \newcommand{\ProgramGraphEN}{Program graph}
 
@@ -103,11 +100,23 @@
 \newcommand{\DynamicInformation}{ข้อมูลเชิงพลวัต}
 \newcommand{\DynamicInformationEN}{Dynamic information}
 
+\newcommand{\StaticInformation}{ข้อมูลเชิงสถิต}
+\newcommand{\StaticInformationEN}{Static information}
+
+\newcommand{\testSuite}{ชุดทดสอบ}
+\newcommand{\testSuiteEN}{Test suite}
+
+\newcommand{\testCase}{กรณีทดสอบ}
+\newcommand{\testCaseEN}{Test case}
+
+\newcommand{\Package}{โปรแกรมสำเร็จ} % http://www.rirs3.royin.go.th
+\newcommand{\PackageEN}{Package}
+
 % - - - - - - - - - - - - - - - - - - - -
 % NEED BY \makethesiscover
 % - - - - - - - - - - - - - - - - - - - -
 \newcommand{\ThesisThaiName}{การสร้างกรณีทดสอบจากกราฟการเรียกเชิงสถิตของภาษาจาวา}
-\newcommand{\ThesisEnglishName}{Test case generation based on Java static call graph}
+\newcommand{\ThesisEnglishName}{Test case generation for Java static call graph}
 \newcommand{\studentname}{นายสิทธิพงษ์ เหล่าโก้ก}
 \newcommand{\studentid}{5870972621}
 \newcommand{\curriculumn}{วิทยาศาสตร์มหาบัณฑิต}
@@ -115,8 +124,8 @@
 \newcommand{\department}{วิศวกรรมคอมพิวเตอร์}
 \newcommand{\faculty}{วิศวกรรมศาสตร์}
 \newcommand{\address}{17/8 หมู่ 18 ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120}
-\newcommand{\telephone}{0861-629-9905}
+\newcommand{\telephone}{061-629-9905}
 \newcommand{\emailaddress}{sitdhibong.l@student.chula.ac.th}
-\newcommand{\advisor}{รศ.ดร.ธาราทิพย์ สุวรรณศาสตร์}
-\newcommand{\thakeywords}{การสร้างกรณีทดสอบ, ภาษาจาวา, \deleted{กราฟการเรียกใช้เชิงสถิต}\added{\scg}}
+\newcommand{\advisor}{รองศาสตราจารย์.ดร.ธาราทิพย์ สุวรรณศาสตร์}
+\newcommand{\thakeywords}{การสร้างกรณีทดสอบ, ภาษาจาวา, \scg}
 \newcommand{\engkeywords}{Test case generation, Java language, Static call graph}
