Fix wrong control

--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -29,7 +29,7 @@
 จะทำให้ชุดทดสอบนั้น สามารถอธิบายคุณลักษณะตลอดจนการดำเนินงานของ{\SUT}ที่เป็นปัจจุบันได้
 
 ดังนั้น การวิจัยนี้จึงต้องการที่จะนำเสนอแนวทางการสร้างกรณีทดสอบ บน{\TestPath}ซึ่งพิจารณาจากความสัมพันธ์ระหว่าง{\softwareComponent} 
-ที่ด้วยรวบรวมได้จากข้อมูล{\StaticInformation}ของ{\sourcode}ภายใน{\Package}ภายใน{\SUT} พร้อมด้วยการสร้างข้อมูลทดสอบ (Test data) 
+ที่ด้วยรวบรวมได้จากข้อมูล{\StaticInformation}ของ{\sourcecode}ภายใน{\Package}ภายใน{\SUT} พร้อมด้วยการสร้างข้อมูลทดสอบ (Test data) 
 ที่สอดคล้องตามเงื่อนไขที่ปรากฏอยู่บน{\TestPath} ที่เลือก ทั้งนี้เพื่อให้ชุดทดสอบที่สร้างขึ้นสามารถทดสอบแต่ละ{\Path}ระหว่าง{\softwareComponent}อย่างน้อย 1 ครั้ง
 โดยใช้ผลลัพธ์ที่เกิดจากการสั่งกระทำการชุดกรณีทดสอบที่สร้างขึ้นกับ{\sourcecode}ซึ่งผ่านการแทรกชุดคำสั่งสำหรับติดตามการทำงาน 
 เพื่อตรวจสอบว่า กรณีทดสอบนั้นสามารถทดสอบทุกความสัมพันธ์ระหว่าง{\softwareComponent}ได้ตามที่ต้องการ
