Update code listing style

--- a/methodology/methodology.tex
+++ b/methodology/methodology.tex
@@ -69,7 +69,7 @@
 แล้วจึงจัดเก็บผลลัพธ์ที่ได้ระหว่างขั้นตอนการทดสอบ เพื่อนำมาเปรียบเทียบกับ{\TestPath}ที่เลือก
 
 \begin{figure}[hbt!]
-    \lstset{basicstyle=\small,style=thesiscodestyle}
+    \lstset{style=thesiscodestyle}
     \lstinputlisting[language=java]{methodology/SimpleBonusScoreInstrumented.java}
     \caption{{\class} \code{SimpleBonusScoreInstrumented}}
     \label{fig:javaBonusScoreInstrumented}
@@ -246,7 +246,7 @@
 
 \begin{figure}[hbt!]
     \lstset{basicstyle=\small,style=thesiscodestyle}
-    \lstinputlisting[language=java]{methodology/SimpleGradingTest.java}
+    \lstinputlisting[language=Java]{methodology/SimpleGradingTest.java}
     \caption{กรณีทดสอบที่สร้างขึ้นจากข้อมูลทดสอบ}
     \label{fig:junitGradingTest}
 \end{figure}
@@ -260,8 +260,8 @@
 และบรรทัดที่ 6 คือค่า \code{"lorem"} เป็นค่า \code{"U"} จะได้ตัวอย่างของ {\it กรณีทดสอบพร้อมใช้งาน (ญ)} ดังนี้
 
 \begin{figure}[hbt!]
-    \lstset{basicstyle=\small,style=thesiscodestyle}
-    \lstinputlisting[language=java]{methodology/SimpleGradingTest-Refined.java}
+    \lstset{style=thesiscodestyle}
+    \lstinputlisting{methodology/SimpleGradingTest-Refined.java}
     \caption{กรณีทดสอบที่สร้างขึ้นจากข้อมูลทดสอบที่ปรับค่าจากนักทดสอบซอฟต์แวร์แล้ว}
     \label{fig:junitGradingTestRefined}
 \end{figure}
