Update limitation and object

--- a/edit-log.tex
+++ b/edit-log.tex
@@ -6,10 +6,17 @@
         \rowcolor{LightGray} 
         {\bf วันที่}   & {\bf หน้าที่}                    & {\bf จุดแก้ไข}          & {\bf บันทึกการแก้ไข} \\ \hline
         2 ธันวาคม    & \pageref{sec:introduction}    & สถิต หรือ สถิตย์          & ตรวจสอบจากพจานานุกรมฉบับสำนักงานราชบัณฑิตยสภาเรียบร้อยแล้ว 
-                                                          ใช้คำว่า {\bf "สถิต"} ส่วนคำว่า {\bf "สถิตย์"} ไม่มีในพจนานุกรมครับ \\ \hline
+                                                            ใช้คำว่า {\bf "สถิต"} ส่วนคำว่า {\bf "สถิตย์"} ไม่มีในพจนานุกรมครับ \\ \hline
                     &  \pageref{sec:introduction}   & ไม่พบปัญหาที่เป็นประเด็น    & ปรับบทนำ \\ \hline
                     & -                             & รูปที่ x (หน้า n)         & ตัดคำว่า\ {\bf (หน้า n)}\ ทิ้งไป \\ \hline
                     & 1-2                           & ปัญหาและความสำคัญไม่ชัดเจน& เพิ่มคำอธิบายลักษณะการทำงาน ปัญหาที่พบ 
-                                                          สมมติฐาน และสิ่งที่ต้องการนำเสนอ \\ \hline
+                                                            สมมติฐาน และสิ่งที่ต้องการนำเสนอ \\ \hline
+                    & \pageref{sec:objective}       & ปรับวัตถุประสงค์ ข้อ 1.    & ยกประโยค {\textit "เพื่อสร้างกรณีทดสอบ..."} 
+                                                            ไปใส่ในขอบเขต \\ \hline 
+                    & \pageref{sec:objective}       & ปรับวัตถุประสงค์ ข้อ 2.    & ปรับเป็นการสร้างเครื่องมือตามแนวคิดในข้อ 1. \\ \hline
+                    & \pageref{sec:limitation}      & ปรับข้อความใน ข้อ \ref{enu:lim:datatype}.    & เปลี่ยน {\it Sequencial programming} 
+                                                            เป็น {\it Parallel} \\ \hline
+                    & \pageref{sec:limitation}      & ปรับข้อความใน ข้อ \ref{enu:lim:seq}.         & ปรับข้อความเป็นการสร้างเครื่องมือตามแนวคิดในข้อ 1. \\ \hline
+                    & \pageref{sec:limitation}      & ปรับข้อความใน ข้อ \ref{enu:lim:loop}.        & ลดจำนวนรอบลงจาก 2 เป็น 1 รอบ \\ \hline
     \end{tabularx}
 \end{table}
