--- a/objective/objective.tex
+++ b/objective/objective.tex
@@ -1,7 +1,8 @@
 \section{วัตถุประสงค์ของงานวิจัย}
+\label{sec:objective}
 
 \begin{enumerate}
-    \item ศึกษาและออกแบบแนวทางการสร้างการกรณีทดสอบจาก{\scg}สำหรับภาษาจาวา เพื่อสร้างกรณีทดสอบที่ครอบคลุม{\TestPath}ระหว่าง{\CUT} อย่างน้อย 1 เส้นทาง
-    \item สร้างข้อมูลทดสอบที่สอดคล้องกับ{\TestPath}ที่เลือก ด้วยวิธีการกำหนดกรอบค่าสำหรับการสุ่มข้อมูลนำเข้า
+    \item ศึกษาและออกแบบแนวทางการสร้างการกรณีทดสอบจาก{\TestPath}ที่ได้จาก{\scg}สำหรับภาษาจาวา\label{obj:designandresearch}
+    \item พัฒนาเครื่องมือตามแนวทางการสร้างกรณีทดสอบ ข้อ \ref{obj:designandresearch}
 \end{enumerate}
 
