--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,21 @@
+@article{XING201491,
+    abstract = {Path-oriented test case generation is in essence a constraint satisfaction problem (CSP) solved by search strategies, among which backtracking algorithms are widely used. In this article, the backtracking algorithm branch and bound (BB) is introduced to generate path-oriented test cases automatically. A model based on state space search is proposed to construct the search tree dynamically. The BB is optimized from two perspectives. Variable permutation with a heuristic rule to break ties is adopted for the branching operation, and interval computation with analysis on the monotony of branching conditions is utilized for the bounding operation. Empirical experiments show that the proposed method performs well with linear complexity, and reaches 100{\%} coverage on some benchmark programs with an advantage over some static and dynamic algorithms.},
+    author = {XING, Ying and GONG, Yun-zhan and WANG, Ya-wen and ZHANG, Xu-zhou},
+    doi = {http://dx.doi.org/10.1016/S1005-8885(14)60291-0},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Theory-of-Testing/1-s2.0-S1005888514602910-main.pdf:pdf},
+    issn = {1005-8885},
+    journal = {The Journal of China Universities of Posts and Telecommunications},
+    keywords = {branch and bound,constraint satisfaction problem,state space search,test case generation},
+    mendeley-groups = {Theory of Testing},
+    number = {2},
+    pages = {91--103},
+    title = {{Intelligent test case generation based on branch and bound}},
+    url = {http://www.sciencedirect.com/science/article/pii/S1005888514602910},
+    volume = {21},
+    year = {2014}
+}
+
+
 @article{Markovi2012,
     author = {Markovi, Du{\v{s}}an and Pe{\v{s}}ovi, Uro{\v{s}} and Jovanovi, {\v{Z}}eljko and Ran, Sini{\v{s}}a},
     file = {:Users/sitdh/OneDrive/Thesis/Papers/Theory-of-Testing/Vol4No1{\_}A11.pdf:pdf},
