Add bibliography package

--- a/configures.tex
+++ b/configures.tex
@@ -34,6 +34,10 @@
 \usepackage{tikz}
 
 % - - - - - - - - - - - - - - - - - - - -
+% Bibliography
+\usepackage{biblatex}
+
+% - - - - - - - - - - - - - - - - - - - -
 % Nested enum
 \renewcommand{\labelenumii}{\theenumii}
 \renewcommand{\theenumii}{\theenumi.\arabic{enumii}.}
