--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -112,20 +112,11 @@
 \newcommand{\Package}{โปรแกรมสำเร็จ} % http://www.rirs3.royin.go.th
 \newcommand{\PackageEN}{Package}
 
-% - - - - - - - - - - - - - - - - - - - -
-% NEED BY \makethesiscover
-% - - - - - - - - - - - - - - - - - - - -
-\newcommand{\ThesisThaiName}{การสร้างกรณีทดสอบจากกราฟการเรียกเชิงสถิตของภาษาจาวา}
-\newcommand{\ThesisEnglishName}{Test case generation for Java static call graph}
-\newcommand{\studentname}{นายสิทธิพงษ์ เหล่าโก้ก}
-\newcommand{\studentid}{5870972621}
-\newcommand{\curriculumn}{วิทยาศาสตร์มหาบัณฑิต}
-\newcommand{\major}{วิศวกรรมซอฟต์แวร์}
-\newcommand{\department}{วิศวกรรมคอมพิวเตอร์}
-\newcommand{\faculty}{วิศวกรรมศาสตร์}
-\newcommand{\address}{17/8 หมู่ 18 ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120}
-\newcommand{\telephone}{061-629-9905}
-\newcommand{\emailaddress}{sitdhibong.l@student.chula.ac.th}
-\newcommand{\advisor}{รองศาสตราจารย์.ดร.ธาราทิพย์ สุวรรณศาสตร์}
-\newcommand{\thakeywords}{การสร้างกรณีทดสอบ, ภาษาจาวา, \scg}
-\newcommand{\engkeywords}{Test case generation, Java language, Static call graph}
+\newcommand{\expectedOutput}{ผลลัพธ์ที่คาดหวัง}
+\newcommand{\expectedOutputEN}{Expected output}
+
+\newcommand{\csp}{ปัญหาการหาค่าเหมาะที่สุดเชิงการจัด} % https://www.cp.eng.chula.ac.th/~somchai/CD/2110427/2546/demo/HW2-TSP/saTSP.htm
+\newcommand{\cspEN}{Constraint satisfaction problem}
+
+\newcommand{\Algorithm}{ขั้นตอนวิธี}
+\newcommand{\AlgorithmEN}{Algorithm}
