Include cover page definition

--- a/sitdhibong-proposal.tex
+++ b/sitdhibong-proposal.tex
@@ -14,6 +14,7 @@
 \defaultfontfeatures{Scale=1.23}
 \renewcommand{\baselinestretch}{1.2}
 
+\include{coverpage-config}
 \include{thesis-lexicon}
 \include{configures}
 \include{commands}
