Add label to section

--- a/methodology/methodology.tex
+++ b/methodology/methodology.tex
@@ -1,4 +1,5 @@
 \section{แนวคิดและวิธีการดำเนินงาน}
+\label{sec:methodology}
 
 งานวิจัยนี้นำเสนอวิธีการสร้างกรณีทดสอบและข้อมูลทดสอบสำหรับ{\TestPath}ระหว่าง{\CUT}อย่างน้อย 1 เส้นทาง 
 บน{\StaticInformation}จาก{\sourcecode}ภาษาจาวาตามที่ผู้ทดสอบสนใจ โดยมีภาพรวมการดำเนินงานวิจัย 
@@ -12,6 +13,7 @@
 \end{sidewaysfigure}
 
 \subsection{การวิเคราะห์ข้อมูลเบื้องต้น}
+\label{subs:introsection}
 
 ในขั้นตอนนี้เริ่มต้นด้วยการนำเข้าข้อมูล{\sourcecode}จาก{\Repository} เพื่อนำมารวบรวม{\StaticInformation} 
 โดยสนใจเพียงเฉพาะ{\class}ซึ่งบรรจุอยู่ภายในกลุ่มข้อมูล (Package) ตามที่ผู้ใช้งานระบุ กำหนดให้เป็น "\FirstTimeDefine{\CUT}{\CUTEN}" 
@@ -253,6 +255,7 @@
 
 \subsection{การปรับค่าความคาดหวัง (6)}
 
+ในขั้นตอนนี้นักทดสอบซอฟต์แวร์ (Software tester) จะทำหน้าที่ปรับค่า\FirstTimeDefine{\expectedOutput}{\expectedOutputEN}
 แนวทางการดำเนินงานในขั้นตอนนี้จะเป็นการปรับค่าข้อมูลที่อยู่ภายในกรณีทดสอบที่ได้รับโดยนักทดสอบซอฟต์แวร์ เพื่อให้กรณีทดสอบนั้นสอดคล้องกับการทำงานที่ควรจะเป็นของโปรแกรม
 มากที่สุด เนื่องจากการวิจัยครั้งนี้ยังไม่รองรับการวิเคราะห์ค่าผลลัพธ์ที่ได้จากการดำเนินงานของ{\method} ยกตัวอย่างเช่นกรณีทดสอบที่ได้จากขั้นตอนที่ 5.4 
 ดัง \figref{fig:junitGradingTest} เมื่อได้ปรับการปรับค่าความคาดหวังจากนักทดสอบซอฟต์แวร์แล้วจะได้เป็นดัง{\figref{fig:junitGradingTestRefined}
