--- a/related-work/related-work.tex
+++ b/related-work/related-work.tex
@@ -3,7 +3,7 @@
 ในการดำเนินการวิจัยครั้งนี้ ได้ศึกษางานวิจัยอื่น ๆ ที่คาดว่าจะสามารถนำมาประยุกต์ใช้เพื่อแก้ไขปัญหาข้างต้นได้ โดยมีงานวิจัยที่เลือกมาดังนี้
 
 % - - - - - - - - - - - - - - - - - - - -
-\subsection{งานวิจัย "A Static Approach to Prioritizing JUnit Test Cases" \cite{6363461}}
+\subsection{งานวิจัย {\it "A Static Approach to Prioritizing JUnit Test Cases"} \cite{6363461}}
 
 งานวิจัยชิ้นนี้ได้นำเสนอวิธีการจัดเรียงกรณีทดสอบด้วยแนวทาง \emph{"JUnit test case Prioritization Techniques operating in the Absence of coverage information (JUPTA)"} 
 โดยอาศัยการวิเคราะห์ข้อมูล{\scg}ที่สร้างขึ้นจากกรณีทดสอบ และโปรแกรมภายใต้การทดสอบเพื่อประมาณค่าความสามารถที่กรณีทดสอบนั้นสามารถครอบคลุม{\sourcecode}ได้
@@ -16,7 +16,26 @@
 และมีประสิทธิภาพในการค้นหาข้อผิดพลาดใกล้เคียงกันกับชุดกรณีทดสอบ จัดเรียงโดยอาศัยข้อมูลเชิงพลวัตประกอบการพิจารณา
 
 % - - - - - - - - - - - - - - - - - - - -
-\subsection{งานวิจัย "GRT: Program-analysis-guided random testing" \cite{Ma2016}}
+\subsection{งานวิจัย {\it "Intelligent test case generation based on branch and bound"} \cite{XING201491}}
+การสร้างกรณีทดสอบโดยพิจารณาจาก{\Path}ของโครงสร้างซอฟต์แวร์นั้น เป็นการแก้ไข\FirstTimeDefine{\csp}{\cspEN} มักแก้ไขปัญหาด้วยแนวทางการค้นหา
+ด้วยขั้นตอนวิธีติดตามย้อนกลับ (Backtracking algorithm) ซึ่งในงานวิจัยชิ้นนี้ได้นำขั้นตอนวิธีแตกกิ่งและกำหนดขอบเขต (Branch and bound) 
+ร่วมกับขั้นตอนวิธีการค้นหาแบบดีที่สุดก่อน (Best-first search) ช่วยในการสร้างกรณีทดสอบแบบอัตโนมัติ จาก{\StaticInformation}ของ{\sourcecode} 
+ประกอบไปด้วย 2 แนวทางด้วยกันนั่นคือ 
+1) การปรับเปลี่ยนค่าตัวของตัวแปรด้วยกฎการแก้ไขปัญหาใช้ลดขนาดของปริภูมิคำตอบ ตลอดจนกำจัดตัวแปรที่ไม่เกี่ยวข้องกับการสร้างชุดคำตอบ 
+เพื่อนำมาใช้ในขั้นตอนการแตกกิ่ง (Branching operation) และ 2) การคำนวณช่วงค่าที่เป็นไปของตัวแปรเพื่อใช้ในขั้นตอนการกำหนดขอบเขต
+ซึ่งงานวิจัยนี้ผู้วิจัยได้ปรับปรุงประสิทธิภาพการทำงานจาก \code{O(n^2)} เป็น \code{O(n)} และเมื่อนำไปทดสอบกับชุดข้อมูลทดสอบภาษา C ทั้งหมด 4 โปรแกรม
+ผลปรากฎว่า วิธีการนี้สามารถสร้างกรณีทดสอบได้ครอบคลุมเงื่อนไขการดำเนินงานทั้งหมด เมื่อเทียบกับการสร้างกรณีทดสอบด้วย ขั้นตอนวิธีเชิงพันธุกรรม (Genetic algorithm)
+หรือ การจำลองการอบเหนียว (simulated annealing) 
+% Ref: https://www.cp.eng.chula.ac.th/~somchai/CD/2110427/2546/demo/HW2-TSP/saTSP.htm
+
+จะเห็นได้จากการทดลองของผู้วิจัยที่สามารถสร้างกรณีทดสอบด้วย{\Algorithm}ที่นำเสนอ สามารถสร้างกรณีทดสอบได้ครอบคลุมมากกว่า{\Algorithm}ที่นำมาเปรียบเทียบ 
+โดยใช้เพียง{\StaticInformation}เท่านั้น ซึ่งไม่จำเป็นต้องส่งกระทำการทดสอบ{\sourcecode}แต่อย่างใด หากแต่ข้อมูลทดสอบที่ใช้ในการทดลองนี้มีขนาดเล็ก 
+(จำนวนแถวน้อยที่สุดคือ 21 บรรทัด และมากที่สุดคือ 59 บรรทัด) และเป็น{\sourcecode}ที่ไม่ได้อยู่ในลักษณะของการพัฒนาโปรแกรมเชิงวัตถุ 
+ดังนั้นหากสามารถนำขั้นตอนวิธีดังที่งานวิจัยนำเสนอมาใช้ในโปรแกรมที่มีขนาดใหญ่ขั้นและพัฒนาด้วยแนวคิดเชิงวัตถุ 
+จะทำให้สามารถหากรณีทดสอบที่ครอบคลุมความสัมพันธ์ระหว่าง{\softwareComponent}ได้ดียิ่งขึ้น
+
+% - - - - - - - - - - - - - - - - - - - -
+\subsection{งานวิจัย {\it "GRT: Program-analysis-guided random testing"} \cite{Ma2016}}
 
 งานวิจัยชิ้นนี้ได้นำเสนอกระบวนการปรับปรุงการสุ่มค่าที่จากเดิมนั้นจะสุ่มค่าแบบไร้ทิศทาง หรือกำหนดกรอบการสุ่มข้อมูลนำเข้าไว้อย่างกว้าง ๆ 
 ทำให้ค่าข้อมูลนำเข้าที่สุ่มได้นั้นมีโอกาสที่จะค้นพบข้อผิดพลาดภายในโปรแกรมได้น้อย งานวิจัยชิ้นนี้จึงได้เสนอแนวทางการนำข้อมูลที่จาก{\sourcecode} ของ
