--- a/configures.tex
+++ b/configures.tex
@@ -52,12 +52,12 @@
 \titlespacing\subsubsection{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
 
 \lstdefinestyle{thesiscodestyle}{
-    tabsize=2,
-    breaklines=true,
-    showspaces=false,
-    numbers=left,
-    basicstyle=\tiny,
+    tabsize=2, numbers=left,
+    breaklines=true, showspaces=false, showstringspaces=false,
+    basicstyle=\listingsfont,
     language=Java
 }
+\newfontfamily\listingsfont[Scale=.5]{Monaco} 
+\newfontfamily\listingsfontinline[Scale=1.8]{Monaco} 
 
 \def\@vpt{12}
