Add section and sub section label

--- a/related-work/related-work.tex
+++ b/related-work/related-work.tex
@@ -17,6 +17,8 @@
 
 % - - - - - - - - - - - - - - - - - - - -
 \subsection{งานวิจัย {\it "Intelligent test case generation based on branch and bound"} \cite{XING201491}}
+\label{sec:sub:bandb}
+
 การสร้างกรณีทดสอบโดยพิจารณาจาก{\Path}ของโครงสร้างซอฟต์แวร์นั้น เป็นการแก้ไข\FirstTimeDefine{\csp}{\cspEN} มักแก้ไขปัญหาด้วยแนวทางการค้นหา
 ด้วยขั้นตอนวิธีติดตามย้อนกลับ (Backtracking algorithm) ซึ่งในงานวิจัยชิ้นนี้ได้นำขั้นตอนวิธีแตกกิ่งและกำหนดขอบเขต (Branch and bound) 
 ร่วมกับขั้นตอนวิธีการค้นหาแบบดีที่สุดก่อน (Best-first search) ช่วยในการสร้างกรณีทดสอบแบบอัตโนมัติ จาก{\StaticInformation}ของ{\sourcecode} 
@@ -25,8 +27,7 @@
 เพื่อนำมาใช้ในขั้นตอนการแตกกิ่ง (Branching operation) และ 2) การคำนวณช่วงค่าที่เป็นไปของตัวแปรเพื่อใช้ในขั้นตอนการกำหนดขอบเขต
 ซึ่งงานวิจัยนี้ผู้วิจัยได้ปรับปรุงประสิทธิภาพการทำงานจาก \code{O(n^2)} เป็น \code{O(n)} และเมื่อนำไปทดสอบกับชุดข้อมูลทดสอบภาษา C ทั้งหมด 4 โปรแกรม
 ผลปรากฎว่า วิธีการนี้สามารถสร้างกรณีทดสอบได้ครอบคลุมเงื่อนไขการดำเนินงานทั้งหมด เมื่อเทียบกับการสร้างกรณีทดสอบด้วย ขั้นตอนวิธีเชิงพันธุกรรม (Genetic algorithm)
-หรือ การจำลองการอบเหนียว (simulated annealing) 
-% Ref: https://www.cp.eng.chula.ac.th/~somchai/CD/2110427/2546/demo/HW2-TSP/saTSP.htm
+หรือ การจำลองการอบเหนียว (simulated annealing) % Ref: https://www.cp.eng.chula.ac.th/~somchai/CD/2110427/2546/demo/HW2-TSP/saTSP.htm
 
 จะเห็นได้จากการทดลองของผู้วิจัยที่สามารถสร้างกรณีทดสอบด้วย{\Algorithm}ที่นำเสนอ สามารถสร้างกรณีทดสอบได้ครอบคลุมมากกว่า{\Algorithm}ที่นำมาเปรียบเทียบ 
 โดยใช้เพียง{\StaticInformation}เท่านั้น ซึ่งไม่จำเป็นต้องส่งกระทำการทดสอบ{\sourcecode}แต่อย่างใด หากแต่ข้อมูลทดสอบที่ใช้ในการทดลองนี้มีขนาดเล็ก 
@@ -36,6 +37,7 @@
 
 % - - - - - - - - - - - - - - - - - - - -
 \subsection{งานวิจัย {\it "GRT: Program-analysis-guided random testing"} \cite{Ma2016}}
+\label{sec:sub:grt}
 
 งานวิจัยชิ้นนี้ได้นำเสนอกระบวนการปรับปรุงการสุ่มค่าที่จากเดิมนั้นจะสุ่มค่าแบบไร้ทิศทาง หรือกำหนดกรอบการสุ่มข้อมูลนำเข้าไว้อย่างกว้าง ๆ 
 ทำให้ค่าข้อมูลนำเข้าที่สุ่มได้นั้นมีโอกาสที่จะค้นพบข้อผิดพลาดภายในโปรแกรมได้น้อย งานวิจัยชิ้นนี้จึงได้เสนอแนวทางการนำข้อมูลที่จาก{\sourcecode} ของ
@@ -46,6 +48,7 @@
 
 % - - - - - - - - - - - - - - - - - - - -
 \subsection{งานวิจัย "Eclat: Automatic Generation and Classification of Test Inputs" \cite{Heaton2000}}
+\label{sec:sub:eclat}
 
 เนื่องจากการข้อมูลที่จะนำมาทดสอบนั้นมีขนาดใหญ่ ดังนั้นงานวิจัยนี้จึงเสนอแนวทางในการวิเคราะห์เพื่อหาซับเซตของข้อมูลนำเข้าทั้งหมดที่สามารถค้นพบข้อผิดพลาด
 ของซอฟต์แวร์ภายใต้การทดสอบได้ ซึ่งงานวิจัยได้นำเสนอวิธีการเลือกกลุ่มข้อมูลนำเข้าโดยพิจารณาจากส่วนย่อยของซอฟต์แวร์ 
