--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -23,7 +23,7 @@
 \newcommand{\FeasibleAndInfeasiblePath}{เส้นทางที่เป็นไปได้และไม่ได้}
 \newcommand{\FeasibleAndInfeasiblePathEN}{Feasib/Users/sitdh/Desktop/vector-Overwatch-Ana-wallpaper.jpg Infeasible path}
 
-\newcommand{\sourcecode}{ชุดรหัสต้นฉบับ}
+\newcommand{\sourcecode}{รหัสต้นฉบับ}
 
 \newcommand{\TestCaseGeneration}{การสร้างข้อมูลทดสอบ}
 \newcommand{\TestCaseGenerationEN}{Test data generation}
@@ -120,3 +120,9 @@
 
 \newcommand{\Algorithm}{ขั้นตอนวิธี}
 \newcommand{\AlgorithmEN}{Algorithm}
+
+\newcommand{\software}{ซอฟต์แวร์}
+\newcommand{\softwareEN}{Software}
+
+\newcommand{\tester}{นักทดสอบซอฟต์แวร์}
+\newcommand{\testerEN}{Software tester}
