--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,17 @@
+@book{Bang-Jensen2009,
+    abstract = {In the previous chapters, we considered various properties of cycles in digraphs. In this chapter, we consider the question of how few vertices have to be deleted to get rid of all cycles. We will also consider the arc version of this question (i.e., to destroy all cycles we delete arcs rather than vertices). The last question leads us to the notion of an ‘optimal' ordering of a digraph which is of interest in various applications. We will see that the minimum number of vertices (arcs) required to destroy all cycles is related to the maximum number of vertex-disjoint (arc-disjoint) cycles in the digraph under consideration. We will also consider the question of decreasing the number of cycles by reversing arcs.},
+    author = {Bang-Jensen, J{\o}rgen and Gutin, Gregory Z.},
+    doi = {10.1007/978-1-84800-998-1},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Books/bok{\%}3A978-1-84800-998.pdf:pdf},
+    isbn = {978-0-85729-041-0},
+    keywords = {Mathematics},
+    mendeley-groups = {Books},
+    pages = {32--34},
+    title = {{Digraphs: Theory, Algorithms and Applications}},
+    url = {http://www.springerlink.com/content/t3x4352677423225/},
+    year = {2009}
+}
+
 @article{XING201491,
     abstract = {Path-oriented test case generation is in essence a constraint satisfaction problem (CSP) solved by search strategies, among which backtracking algorithms are widely used. In this article, the backtracking algorithm branch and bound (BB) is introduced to generate path-oriented test cases automatically. A model based on state space search is proposed to construct the search tree dynamically. The BB is optimized from two perspectives. Variable permutation with a heuristic rule to break ties is adopted for the branching operation, and interval computation with analysis on the monotony of branching conditions is utilized for the bounding operation. Empirical experiments show that the proposed method performs well with linear complexity, and reaches 100{\%} coverage on some benchmark programs with an advantage over some static and dynamic algorithms.},
     author = {XING, Ying and GONG, Yun-zhan and WANG, Ya-wen and ZHANG, Xu-zhou},
