Add edit record

--- a/edit-log.tex
+++ b/edit-log.tex
@@ -11,6 +11,9 @@
                     & -                             & รูปที่ x (หน้า n)         & ตัดคำว่า\ {\bf (หน้า n)}\ ทิ้งไป \\ \hline
                     & 1-2                           & ปัญหาและความสำคัญไม่ชัดเจน& เพิ่มคำอธิบายลักษณะการทำงาน ปัญหาที่พบ 
                                                             สมมติฐาน และสิ่งที่ต้องการนำเสนอ \\ \hline
+                    & \pageref{sec:sub:sub:cfg}     & ปรับลดเนื้อหา            & ปรับเนื้อหาให้กระชับมากขึ้น \\ \hline
+                    & \pageref{sec:sub:bandb}       & เพิ่มงานวิจัยที่เกี่ยวข้อง     & เพิ่มงานวิจัยที่เกี่ยวข้องกับการสร้างกรณีทดสอบด้วย{\Algorithm} 
+                                                            Branch and bound\\ \hline
                     & \pageref{sec:objective}       & ปรับวัตถุประสงค์ ข้อ 1.    & ยกประโยค {\textit "เพื่อสร้างกรณีทดสอบ..."} 
                                                             ไปใส่ในขอบเขต \\ \hline 
                     & \pageref{sec:objective}       & ปรับวัตถุประสงค์ ข้อ 2.    & ปรับเป็นการสร้างเครื่องมือตามแนวคิดในข้อ 1. \\ \hline
